// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag base demo works fine 1`] = `
<div>
  <div
    class="tag-demo"
  >
    <span
      class="t-tag t-tag--default t-size-m t-tag--dark"
    >
      <!---->
      
      标签一
      
      <!---->
    </span>
    <a
      href="https://www.tencent.com/zh-cn"
      target="_blank"
    >
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark"
      >
        <!---->
        
        超链接
        
        <!---->
      </span>
    </a>
  </div>
  <div
    class="tag-demo"
  >
    <span
      class="t-tag t-tag--primary t-size-m t-tag--dark"
    >
      <!---->
      
      标签一
      
      <!---->
    </span>
    <span
      class="t-tag t-tag--success t-size-m t-tag--dark"
    >
      <!---->
      
      标签二
      
      <!---->
    </span>
    <span
      class="t-tag t-tag--warning t-size-m t-tag--dark"
    >
      <!---->
      
      标签三
      
      <!---->
    </span>
    <span
      class="t-tag t-tag--danger t-size-m t-tag--dark"
    >
      <!---->
      
      标签四
      
      <!---->
    </span>
  </div>
  <div
    class="tag-demo light"
  >
    <span
      class="t-tag t-tag--primary t-size-m t-tag--light"
    >
      <!---->
      
      标签一
      
      <!---->
    </span>
    <span
      class="t-tag t-tag--success t-size-m t-tag--light"
    >
      <!---->
      
      标签二
      
      <!---->
    </span>
    <span
      class="t-tag t-tag--warning t-size-m t-tag--light"
    >
      <!---->
      
      标签三
      
      <!---->
    </span>
    <span
      class="t-tag t-tag--danger t-size-m t-tag--light"
    >
      <!---->
      
      标签四
      
      <!---->
    </span>
  </div>
  <div
    class="tag-demo plain"
  >
    <span
      class="t-tag t-tag--primary t-size-m t-tag--plain"
    >
      <!---->
      
      标签一
      
      <!---->
    </span>
    <span
      class="t-tag t-tag--success t-size-m t-tag--plain"
    >
      <!---->
      
      标签二
      
      <!---->
    </span>
    <span
      class="t-tag t-tag--warning t-size-m t-tag--plain"
    >
      <!---->
      
      标签三
      
      <!---->
    </span>
    <span
      class="t-tag t-tag--danger t-size-m t-tag--plain"
    >
      <!---->
      
      标签四
      
      <!---->
    </span>
  </div>
</div>
`;

exports[`Tag delete demo works fine 1`] = `
<div
  class="tag-demo"
>
  <div
    class="tag-block"
  >
    <span
      class="t-tag t-tag--primary t-size-m t-tag--dark t-tag--close"
    >
      <!---->
      
       标签一 
      
      <svg
        class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </span>
    <span
      class="t-tag t-tag--success t-size-m t-tag--dark t-tag--close"
    >
      <!---->
      
       标签二 
      
      <svg
        class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </span>
    <span
      class="t-tag t-tag--warning t-size-m t-tag--dark t-tag--close"
    >
      <!---->
      
       标签三 
      
      <svg
        class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </span>
    <span
      class="t-tag t-tag--danger t-size-m t-tag--dark t-tag--close"
    >
      <!---->
      
       标签四 
      
      <svg
        class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </span>
  </div>
  <div
    class="tag-block light"
  >
    <span
      class="t-tag t-tag--primary t-size-m t-tag--light t-tag--close"
    >
      <!---->
      
       标签一 
      
      <svg
        class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </span>
    <span
      class="t-tag t-tag--success t-size-m t-tag--light t-tag--close"
    >
      <!---->
      
       标签二 
      
      <svg
        class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </span>
    <span
      class="t-tag t-tag--warning t-size-m t-tag--light t-tag--close"
    >
      <!---->
      
       标签三 
      
      <svg
        class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </span>
    <span
      class="t-tag t-tag--danger t-size-m t-tag--light t-tag--close"
    >
      <!---->
      
       标签四 
      
      <svg
        class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </span>
  </div>
  <div
    class="tag-block plain"
  >
    <span
      class="t-tag t-tag--primary t-size-m t-tag--plain t-tag--close"
    >
      <!---->
      
       标签一 
      
      <svg
        class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </span>
    <span
      class="t-tag t-tag--success t-size-m t-tag--plain t-tag--close"
    >
      <!---->
      
       标签二 
      
      <svg
        class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </span>
    <span
      class="t-tag t-tag--warning t-size-m t-tag--plain t-tag--close"
    >
      <!---->
      
       标签三 
      
      <svg
        class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </span>
    <span
      class="t-tag t-tag--danger t-size-m t-tag--plain t-tag--close"
    >
      <!---->
      
       标签四 
      
      <svg
        class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </span>
  </div>
  <div
    class="tag-block"
  >
    
    <span
      class="t-tag t-tag--default t-size-m t-tag--dark t-tag--ellipsis t-tag--close"
      style="max-width: 100px;"
    >
      <!---->
      <span
        class="t-tag--text"
        style="max-width: 100px;"
      >
        
        可删除标签可删除标签
        
      </span>
      <svg
        class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </span>
    <span
      class="t-tag t-tag--default t-size-m t-tag--dark t-tag--ellipsis t-tag--close"
      style="max-width: 100px;"
    >
      <svg
        class="t-icon t-icon-discount t-size-m"
      >
        <use
          href="#t-icon-discount"
        />
      </svg>
      <span
        class="t-tag--text"
        style="max-width: 100px;"
      >
        
        可删除标签可删除标签
        
      </span>
      <svg
        class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </span>
    <span
      class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close t-is-disabled t-tag--disabled"
    >
      <!---->
      
      可删除标签
      
      <svg
        class="t-icon t-icon-close t-tag__icon-close t-tag__icon-close"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </span>
    
  </div>
  <div
    class="tag-block editable"
  >
    <span
      class="t-tag t-tag--default t-size-m t-tag--dark"
    >
      <!---->
      
      <svg
        class="t-icon t-icon-add"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
       添加标签 
      
      <!---->
    </span>
  </div>
</div>
`;

exports[`Tag icon demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <div
    class="tdesign-demo-block-row"
  >
    <span
      class="t-tag t-tag--default t-size-m t-tag--dark"
    >
      <svg
        class="t-icon t-icon-discount t-size-m"
      >
        <use
          href="#t-icon-discount"
        />
      </svg>
      
       默认标签 
      
      <!---->
    </span>
  </div>
  <div
    class="tdesign-demo-block-row"
  >
    <span
      class="t-tag t-tag--default t-size-m t-tag--dark"
    >
      
      <svg
        class="t-icon t-icon-discount t-size-m"
      >
        <use
          href="#t-icon-discount"
        />
      </svg>
      
      
       Icon插槽 
      
      <!---->
    </span>
  </div>
</div>
`;

exports[`Tag long-text demo works fine 1`] = `
<div
  class="tdesign-tag-ellipsis"
>
  <span
    class="t-tag t-tag--default t-size-m t-tag--dark t-tag--ellipsis"
    style="max-width: 150px;"
    title="默认超八个字超长文本标签超长省略文本标签"
  >
    <!---->
    <span
      class="t-tag--text"
      style="max-width: 150px;"
    >
      
       默认超八个字超长文本标签超长省略文本标签 
      
    </span>
    <!---->
  </span>
</div>
`;

exports[`Tag plain demo works fine 1`] = `
<div
  class="tdesign-tag-plain"
>
  <span
    class="t-tag t-tag--primary t-size-m t-tag--plain"
  >
    <!---->
    
     标签一 
    
    <!---->
  </span>
  <span
    class="t-tag t-tag--success t-size-m t-tag--plain"
  >
    <!---->
    
     标签二 
    
    <!---->
  </span>
  <span
    class="t-tag t-tag--default t-size-m t-tag--plain"
  >
    <!---->
    
     标签三 
    
    <!---->
  </span>
  <span
    class="t-tag t-tag--warning t-size-m t-tag--plain"
  >
    <!---->
    
     标签四 
    
    <!---->
  </span>
  <span
    class="t-tag t-tag--danger t-size-m t-tag--plain"
  >
    <!---->
    
     标签五 
    
    <!---->
  </span>
</div>
`;

exports[`Tag selectable demo works fine 1`] = `
<div
  class="tag-demo"
>
  
  <span
    class="t-tag t-tag--check t-tag--default t-tag--checked"
  >
    
    选中
    
  </span>
  <span
    class="t-tag t-tag--check t-tag--default"
  >
    
    未选
    
  </span>
  <span
    class="t-tag t-tag--check t-tag--default t-tag--disabled"
  >
    
    Disabled
    
  </span>
  
</div>
`;

exports[`Tag shape demo works fine 1`] = `
<div>
  <div
    class="tag-demo"
  >
    <span
      class="t-tag t-tag--default t-size-m t-tag--dark"
    >
      <!---->
      
      标签一
      
      <!---->
    </span>
    <span
      class="t-tag t-tag--primary t-size-m t-tag--dark"
    >
      <!---->
      
      标签一
      
      <!---->
    </span>
  </div>
  <div
    class="tag-demo"
  >
    <span
      class="t-tag t-tag--default t-size-m t-tag--dark t-tag--round"
    >
      <!---->
      
      标签一
      
      <!---->
    </span>
    <span
      class="t-tag t-tag--primary t-size-m t-tag--dark t-tag--round"
    >
      <!---->
      
      标签一
      
      <!---->
    </span>
  </div>
  <div
    class="tag-demo"
  >
    <span
      class="t-tag t-tag--default t-size-m t-tag--dark t-tag--mark"
    >
      <!---->
      
      标签一
      
      <!---->
    </span>
    <span
      class="t-tag t-tag--primary t-size-m t-tag--dark t-tag--mark"
    >
      <!---->
      
      标签一
      
      <!---->
    </span>
  </div>
</div>
`;

exports[`Tag size demo works fine 1`] = `
<div
  class="tag-demo"
>
  <span
    class="t-tag t-tag--default t-size-s t-tag--dark"
  >
    <!---->
    
     小型标签 
    
    <!---->
  </span>
  <span
    class="t-tag t-tag--default t-size-m t-tag--dark"
  >
    <!---->
    
    默认标签
    
    <!---->
  </span>
  <span
    class="t-tag t-tag--default t-size-l t-tag--dark"
  >
    <!---->
    
     大型标签 
    
    <!---->
  </span>
</div>
`;
